# codeclub

./: check_autotrade.sh  create_autotrade_scaffold.sh
options-trading-bot/: .env.example  .gitignore  BACKTESTING_GUIDE.md  BACKTEST_GUIDE.md  BACKTEST_QUICK_START.md  BACKTEST_REPORT.md  DEBUGGING.md  DRAWDOWN_FILTER_SUMMARY.md  ENHANCEMENT_SUMMARY.md  FANG_TEST_RESULTS.txt  FINAL_RESULTS.md  HEDGING_DELIVERY_INDEX.md  HEDGING_STRATEGY.md  HEDGING_SUMMARY.txt  INDEX.md  MANIFEST.md  OAUTH_DOCUMENTATION_INDEX.md  OAUTH_MIGRATION.md  OPTIMIZATION_COMPLETE.md  OPTIONS_PRICING_GUIDE.md  PROJECT_STATUS.md  QUICKSTART.md  QUICK_START.md  README.md  README_OPTIMIZATION.md  README_v2.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  SCHWAB_IMPLEMENTATION.md  SCHWAB_OAUTH_SETUP.md  SCHWAB_QUICK_START.md  SCHWAB_REFACTORING_COMPLETE.md  SCHWAB_TEST_GUIDE.md  SCHWAB_TOKEN_SETUP.md  SPY_FILTER_ANALYSIS.md  STOCK_SCANNER_GUIDE.md  STRATEGY_COMPARISON.md  STRATEGY_RESULTS_SUMMARY.txt  TDA_BOT_TECHNICAL_ANALYSIS.md  TELEGRAM_GUIDE.md  (+40 more)
options-trading-bot/src/api/: __init__.py
options-trading-bot/src/backtesting/: __init__.py  backtester.py
options-trading-bot/src/bot/: __init__.py
options-trading-bot/src/brokers/: __init__.py
options-trading-bot/src/core/: __init__.py  db.py  logger.py
options-trading-bot/src/indicators/: __init__.py  bollinger_bands.py  macd.py  rsi.py
options-trading-bot/tests/: conftest.py  test_enhanced_strategy.py  test_indicators.py  test_options_pricing.py  test_quant_analysis.py  test_risk.py  test_strategy.py
(+13 files in other folders)
